--- a/crates/gbmu/Cargo.toml
+++ b/crates/gbmu/Cargo.toml
@@ -11,6 +11,7 @@ description = "Fusion Emulator for the Nintendo Game Boy"
 [dependencies]
 bindings = { path = "../bindings"}
 shared = { path = "../shared" }
+ui = { path = "../ui" }
 structopt = { version = "0.3"}
 anyhow = "1.0.52"
 log = "0.4.14"
