Add install to CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ target_compile_definitions(gb PUBLIC "ASAN_OPTIONS=detect_leaks=0")
 
 include(FetchContent)
 option(WITH_LIBYACC "Build libyacc" OFF)
-option(WITH_ASAN "Build with memory sanitizer" ON)
+option(WITH_ASAN "Build with memory sanitizer" OFF)
 option(BUILD_GBCLODO "Build gbclodo executable" ON)
 option(DEBUG_COLORS "Enable debug palette" ON)
 option(WITH_TESTS "Build tests" OFF)
@@ -487,3 +487,5 @@ if (WITH_TESTS)
 	enable_testing()
 	add_subdirectory(tests)
 endif()
+
+install(TARGETS gb DESTINATION bin)
