--- a/crates/ui/Cargo.toml
+++ b/crates/ui/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 enum-iterator = "0.7.0"
 itertools = "0.10.1"
 ascii = "1.0.0"
+ouroboros = "0.14.2"
 num_enum = "0.5.3"
 bindings = { path = "../bindings"}
 shared = { path = "../shared" }
