--- a/crates/gbmu/Cargo.toml
+++ b/crates/gbmu/Cargo.toml
@@ -18,5 +18,5 @@ log = "0.4.14"
 pretty_env_logger = "0.4.0"
 pixels = "0.9.0"
 gilrs = "0.8.1"
-iced_wgpu = {git = "https://github.com/hecrj/iced" , branch = "0.4"}
-iced_winit = {git = "https://github.com/hecrj/iced" , branch = "0.4"}
+iced_wgpu = {git = "https://github.com/hecrj/iced" , rev = "af7cbf0"}
+iced_winit = {git = "https://github.com/hecrj/iced" , rev = "af7cbf0"}
